--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <p><strong>아래 카카오톡 아이콘을 눌러 전송하세요</strong> By. 갑자</p>
 <a id="kakao-link-btn" href="javascript:sendLink()">
   <img
-    src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"
-  />
+    src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"/>
 </a>
 <script type="text/javascript">
        Kakao.init("cb0bc9138bf95e950b93a724e4834fe3");
