--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript">
        Kakao.init("cb0bc9138bf95e950b93a724e4834fe3");
        function sendLink() {
-       Kakao.Link.sendDefault({
+       Kakao.Link.sendCustom({
             templateId: 88280
         });
     }
